--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,20 +18,32 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors{
+        free {
+            applicationId "com.udacity.gradle.builditbigger.free"
+        }
+        paid {
+            applicationId "com.udacity.gradle.builditbigger.paid"
+        }
+    }
+
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
     compile project(':jokedisplayer')
     compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.google.android.gms:play-services-ads:9.8.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile project(path: ':jokesBackend', configuration: 'android-endpoints')
-
     compile 'com.google.http-client:google-http-client-android:1.19.0'
     compile 'com.google.api-client:google-api-client:1.19.0'
+
+
+    freeCompile 'com.google.android.gms:play-services-ads:11.0.4'
+
 }
